--- a/static/css/mdlink.css
+++ b/static/css/mdlink.css
@@ -11,15 +11,27 @@ body, html{
 a{ text-decoration: none; color: #666;}
 a:hover{ text-decoration: underline; color: #666}
 
-
 .blue {
   color: var(--md-link-blue, #007BFF);
 }
-.txt-info {
-  font-size: 12px;
-  color: #999;
-}
 
+.logo {
+  display: inline-block;
+  width: 32px;
+  height: 33px;
+  padding: 2px;
+  padding-top: 1px;
+}
+.logo::after {
+  content: "[)";
+  text-align: center;
+  vertical-align: middle;
+  font-size: 30px;
+  line-height: 1;
+  color: var(--md-link-blue);
+  letter-spacing: 4px;
+  font-weight: bold;
+}
 
 .radio_group {
   display: flex;
@@ -48,9 +60,9 @@ a:hover{ text-decoration: underline; color: #666}
 }
 .u-radio .u-radio-block {
   position: relative;
-  padding: 10px 8px;
+  padding: 8px 0 0 8px;
   height: 44px;
-  font-size: 14px;
+  font-size: 12px;
   color: #666;
   background-color: transparent;
   border: 1px solid #ccc;
@@ -67,7 +79,7 @@ a:hover{ text-decoration: underline; color: #666}
   content: "✓";
   display: block;
   position: absolute;
-  top: 6px;
+  top: 4px;
   right: 8px;
   font-size: 16px;
   color: var(--md-link-blue);
@@ -130,9 +142,15 @@ a:hover{ text-decoration: underline; color: #666}
 .m-header {
   margin: 0;
   padding: 0;
-  padding-top: 30px;
+  padding-top: 28px;
+  text-align: center;
+  line-height: 1.1;
+  font-size: 12px;
+  color: #999;
 }
-
+.m-header > div {
+  vertical-align: middle;
+}
 .m-header h1 {
   margin: 0;
   padding: 0;
@@ -140,30 +158,20 @@ a:hover{ text-decoration: underline; color: #666}
   text-align: center;
   color: #333;
 }
-.m-header h1 .logo {
-  margin-right: 6px;
-  letter-spacing: 4px;
-  font-weight: bold;
+.m-header p {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+.m-header a {
+  color: #999;
+  text-decoration: underline;
+}
+.m-header a:hover {
+  color: var(--md-link-blue);
 }
 
 .m-body{
-  margin: 30px;
-  margin-top: 20px;
-  min-width: 300px;
-}
-
-.m-foot{
-  padding: 8px 0 10px 0;
-  border-top: 1px solid #ddd;
-}
-.m-foot p{
-  margin: 0;
-  padding: 0;
-  padding-right: 10px;
-  text-align: right;
-  font-size: 12px;
-  color: #666;
-}
-.m-foot p a {
-  text-decoration: underline;
+  margin: 12px 28px 32px;
+  min-width: 360px;
 }
