--- a/static/css/mdlink.css
+++ b/static/css/mdlink.css
@@ -91,9 +91,6 @@ a:hover{ text-decoration: underline; color: #666}
 }
 
 
-.link_item{
-  margin: 12px 0;
-}
 .link_item .link_label{
   display: block;
   height: 28px;
@@ -121,10 +118,10 @@ a:hover{ text-decoration: underline; color: #666}
 }
 
 .u-btn{
-  margin-top: 24px;
   display: block;
   box-sizing: border-box;
-  width: 100%; height: 36px;
+  width: 160px;
+  height: 36px;
   text-align: center;
   font-size: 18px; line-height: 36px;
   color: #fff;
@@ -141,12 +138,11 @@ a:hover{ text-decoration: underline; color: #666}
 
 .m-header {
   margin: 0;
-  padding: 0;
-  padding-top: 28px;
-  text-align: center;
+  padding: 24px;
   line-height: 1.1;
   font-size: 12px;
   color: #999;
+  background-color: #fff;
 }
 .m-header > div {
   vertical-align: middle;
@@ -171,7 +167,25 @@ a:hover{ text-decoration: underline; color: #666}
   color: var(--md-link-blue);
 }
 
+.m-header .btn-wrapper {
+  float: right;
+  top: 28px;
+  right: 28px;
+}
+
 .m-body{
-  margin: 12px 28px 32px;
-  min-width: 360px;
+  margin: 0;
+  padding: 16px 24px 24px 24px;
+  min-width: 400px;
+  border-top: 1px solid #e0e0e0;
+}
+
+.u-2column {
+  display: flex;
+}
+.u-2column .link_item {
+  flex: 1;
+}
+.u-2column .link_item:first-child {
+  margin-right: 8px;
 }
