--- a/static/css/mdlink.css
+++ b/static/css/mdlink.css
@@ -2,6 +2,7 @@
   --md-link-blue: rgb(0, 123, 255);
   --md-link-blue-light: rgba(0, 123, 255, 0.1);
   --md-link-radius-normal: 4px;
+  --md-link-btn-width: 160px;
 }
 
 body, html{
@@ -10,27 +11,10 @@ body, html{
 }
 a{ text-decoration: none; color: #666;}
 a:hover{ text-decoration: underline; color: #666}
+p { margin: 0; padding: 0; }
 
 .blue {
   color: var(--md-link-blue, #007BFF);
-}
-
-.logo {
-  display: inline-block;
-  width: 32px;
-  height: 33px;
-  padding: 2px;
-  padding-top: 1px;
-}
-.logo::after {
-  content: "[)";
-  text-align: center;
-  vertical-align: middle;
-  font-size: 30px;
-  line-height: 1;
-  color: var(--md-link-blue);
-  letter-spacing: 4px;
-  font-weight: bold;
 }
 
 .radio_group {
@@ -67,6 +51,7 @@ a:hover{ text-decoration: underline; color: #666}
   background-color: transparent;
   border: 1px solid #ccc;
   border-radius: var(--md-link-radius-normal);
+  user-select: none;
 }
 .u-radio .u-radio-block:hover {
   border-color: var(--md-link-blue, #15AFD6);
@@ -120,7 +105,7 @@ a:hover{ text-decoration: underline; color: #666}
 .u-btn{
   display: block;
   box-sizing: border-box;
-  width: 160px;
+  width: var(--md-link-btn-width);
   height: 36px;
   text-align: center;
   font-size: 18px; line-height: 36px;
@@ -132,13 +117,43 @@ a:hover{ text-decoration: underline; color: #666}
   outline: none;
 }
 .u-btn:disabled{
-  /* background-color: var(--md-link-blue, #007BFF); */
+  opacity: 0.5;
   cursor: default;
 }
 
+.u-tips {
+  font-size: 12px;
+  line-height: 1.5;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.logo {
+  display: inline-block;
+  width: 32px;
+  height: 33px;
+  padding: 2px;
+  padding-top: 1px;
+}
+.logo::after {
+  content: "[)";
+  text-align: center;
+  vertical-align: middle;
+  font-size: 30px;
+  line-height: 1;
+  color: var(--md-link-blue);
+  letter-spacing: 4px;
+  font-weight: bold;
+}
+
 .m-header {
-  margin: 0;
+  box-sizing: border-box;
+  height: 84px; /* 24 36 24 */
   padding: 24px;
+  padding-bottom: 0;
+
+  margin: 0;
   line-height: 1.1;
   font-size: 12px;
   color: #999;
@@ -171,6 +186,8 @@ a:hover{ text-decoration: underline; color: #666}
   float: right;
   top: 28px;
   right: 28px;
+  width: var(--md-link-btn-width);
+  text-align: center;
 }
 
 .m-body{
