--- a/static/css/mdlink.css
+++ b/static/css/mdlink.css
@@ -2,6 +2,7 @@
   --md-link-blue: rgb(0, 123, 255);
   --md-link-blue-light: rgba(0, 123, 255, 0.1);
   --md-link-radius-normal: 4px;
+  --md-link-btn-width: 160px;
 }
 
 body, html{
@@ -10,16 +11,11 @@ body, html{
 }
 a{ text-decoration: none; color: #666;}
 a:hover{ text-decoration: underline; color: #666}
-
+p { margin: 0; padding: 0; }
 
 .blue {
   color: var(--md-link-blue, #007BFF);
 }
-.txt-info {
-  font-size: 12px;
-  color: #999;
-}
-
 
 .radio_group {
   display: flex;
@@ -48,13 +44,14 @@ a:hover{ text-decoration: underline; color: #666}
 }
 .u-radio .u-radio-block {
   position: relative;
-  padding: 10px 8px;
+  padding: 8px 0 0 8px;
   height: 44px;
-  font-size: 14px;
+  font-size: 12px;
   color: #666;
   background-color: transparent;
   border: 1px solid #ccc;
   border-radius: var(--md-link-radius-normal);
+  user-select: none;
 }
 .u-radio .u-radio-block:hover {
   border-color: var(--md-link-blue, #15AFD6);
@@ -67,7 +64,7 @@ a:hover{ text-decoration: underline; color: #666}
   content: "✓";
   display: block;
   position: absolute;
-  top: 6px;
+  top: 4px;
   right: 8px;
   font-size: 16px;
   color: var(--md-link-blue);
@@ -79,9 +76,6 @@ a:hover{ text-decoration: underline; color: #666}
 }
 
 
-.link_item{
-  margin: 12px 0;
-}
 .link_item .link_label{
   display: block;
   height: 28px;
@@ -109,10 +103,10 @@ a:hover{ text-decoration: underline; color: #666}
 }
 
 .u-btn{
-  margin-top: 24px;
   display: block;
   box-sizing: border-box;
-  width: 100%; height: 36px;
+  width: var(--md-link-btn-width);
+  height: 36px;
   text-align: center;
   font-size: 18px; line-height: 36px;
   color: #fff;
@@ -123,16 +117,51 @@ a:hover{ text-decoration: underline; color: #666}
   outline: none;
 }
 .u-btn:disabled{
-  /* background-color: var(--md-link-blue, #007BFF); */
+  opacity: 0.5;
   cursor: default;
 }
 
-.m-header {
-  margin: 0;
-  padding: 0;
-  padding-top: 30px;
+.u-tips {
+  font-size: 12px;
+  line-height: 1.5;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
+.logo {
+  display: inline-block;
+  width: 32px;
+  height: 33px;
+  padding: 2px;
+  padding-top: 1px;
+}
+.logo::after {
+  content: "[)";
+  text-align: center;
+  vertical-align: middle;
+  font-size: 30px;
+  line-height: 1;
+  color: var(--md-link-blue);
+  letter-spacing: 4px;
+  font-weight: bold;
+}
+
+.m-header {
+  box-sizing: border-box;
+  height: 84px; /* 24 36 24 */
+  padding: 24px;
+  padding-bottom: 0;
+
+  margin: 0;
+  line-height: 1.1;
+  font-size: 12px;
+  color: #999;
+  background-color: #fff;
+}
+.m-header > div {
+  vertical-align: middle;
+}
 .m-header h1 {
   margin: 0;
   padding: 0;
@@ -140,30 +169,40 @@ a:hover{ text-decoration: underline; color: #666}
   text-align: center;
   color: #333;
 }
-.m-header h1 .logo {
-  margin-right: 6px;
-  letter-spacing: 4px;
-  font-weight: bold;
+.m-header p {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+.m-header a {
+  color: #999;
+  text-decoration: underline;
+}
+.m-header a:hover {
+  color: var(--md-link-blue);
+}
+
+.m-header .btn-wrapper {
+  float: right;
+  top: 28px;
+  right: 28px;
+  width: var(--md-link-btn-width);
+  text-align: center;
 }
 
 .m-body{
-  margin: 30px;
-  margin-top: 20px;
-  min-width: 300px;
+  margin: 0;
+  padding: 16px 24px 24px 24px;
+  min-width: 400px;
+  border-top: 1px solid #e0e0e0;
 }
 
-.m-foot{
-  padding: 8px 0 10px 0;
-  border-top: 1px solid #ddd;
+.u-2column {
+  display: flex;
 }
-.m-foot p{
-  margin: 0;
-  padding: 0;
-  padding-right: 10px;
-  text-align: right;
-  font-size: 12px;
-  color: #666;
+.u-2column .link_item {
+  flex: 1;
 }
-.m-foot p a {
-  text-decoration: underline;
+.u-2column .link_item:first-child {
+  margin-right: 8px;
 }
